--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Progress Component | Installation, Usage, and API
+
 description: Progress helps show the progress status for a time-consuming task that consists of several steps.
+
 pageTitle: Progress
+
 pageDescription: Progress helps show the progress status for a time-consuming task that consists of several steps.
+
 showHeader: true
 ---
 
@@ -15,23 +19,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Progress` component to your project.
-
-```jsx
-npx install @gluestack-ui add progress
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Progress } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -56,6 +43,23 @@ import { Progress } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Progress` component to your project.
+
+```bash
+npx install @gluestack-ui add progress
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Progress } from './components';
+```
+
 <br />
 
 ## Anatomy
