--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Spinner Component | Installation, Usage, and API
+
 description: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
+
 pageTitle: Spinner
+
 pageDescription: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
+
 showHeader: true
 ---
 
@@ -15,23 +19,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Spinner` component to your project.
-
-```jsx
-npx install @gluestack-ui add spinner
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Spinner } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -54,6 +41,23 @@ import { Spinner } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Spinner` component to your project.
+
+```bash
+npx install @gluestack-ui add spinner
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Spinner } from './components';
+```
+
 <br />
 
 ## Anatomy
