--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Slider Component | Installation, Usage, and API
+
 description: The Slider allows users to select options from a given range of values.
+
 pageTitle: Slider
+
 pageDescription: The Slider allows users to select options from a given range of values.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Slider` component to your project.
-
-```jsx
-npx install @gluestack-ui add slider
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Slider } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -68,6 +55,23 @@ import { Slider } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Slider` component to your project.
+
+```bash
+npx install @gluestack-ui add slider
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Slider } from './components';
+```
+
 <br />
 
 ## Anatomy
