--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Switch Component | Installation, Usage, and API
+
 description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+
 pageTitle: Switch
+
 pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+
 showHeader: true
 ---
 
@@ -15,23 +19,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Switch` component to your project.
-
-```jsx
-npx install @gluestack-ui add switch
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Switch } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -60,6 +47,23 @@ function Example(){
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Switch` component to your project.
+
+```bash
+npx install @gluestack-ui add switch
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Switch } from './components';
+```
+
 <br />
 
 ## Anatomy
