--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Box Component | Installation, Usage, and API
+
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
+
 pageTitle: Box
+
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
+
 showHeader: true
 ---
 
@@ -16,23 +20,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Box` component to your project.
-
-```jsx
-npx install @gluestack-ui add box
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Box } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -67,6 +54,23 @@ import { Box } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Box` component to your project.
+
+```bash
+npx install @gluestack-ui add box
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Box } from './components';
+```
+
 <br />
 
 ## Anatomy
