--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Divider Component | Installation, Usage, and API
+
 description: Divider can visually separate content in a given list or group.
+
 pageTitle: Divider
+
 pageDescription: Divider can visually separate content in a given list or group.
+
 showHeader: true
 ---
 
@@ -15,23 +19,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Divider` component to your project.
-
-```jsx
-npx install @gluestack-ui add divider
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Divider } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -61,6 +48,23 @@ import { Divider } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Divider` component to your project.
+
+```bash
+npx install @gluestack-ui add divider
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Divider } from './components';
+```
+
 <br />
 
 ## Anatomy
