--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui VStack Component | Installation, Usage, and API
+
 description: VStack aligns items vertically. Column is also an alias for VStack.
+
 pageTitle: VStack
+
 pageDescription: VStack aligns items vertically. Column is also an alias for VStack.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `VStack` component to your project.
-
-```jsx
-npx install @gluestack-ui add vstack
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { VStack } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -65,6 +52,23 @@ import { VStack } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `VStack` component to your project.
+
+```bash
+npx install @gluestack-ui add vstack
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { VStack } from './components';
+```
+
 <br />
 
 ## Anatomy
