--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -21,25 +21,6 @@ import {
 
 import Wrapper from '../../Wrapper';
 
-# Installation
-
-This command copies the `Avatar` component to your project.
-
-```jsx
-npx install @gluestack-ui add avatar
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Avatar } from 'components';
-```
-
-````
-
-<br />
-
 # Basic
 
 <AppProvider>
@@ -71,6 +52,23 @@ import { Avatar } from 'components';
 </AppProvider>
 <br />
 
+# Installation
+
+This command copies the `Avatar` component to your project.
+
+```bash
+npx install @gluestack-ui add avatar
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Avatar } from './components';
+```
+
+<br />
+
 ## Anatomy
 
 The avatar component consists of the following parts:
@@ -85,7 +83,7 @@ export default () => (
     </Avatar>
   </Avatar.Group>
 );
-````
+```
 
 ## API Reference
 
