--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -47,8 +47,8 @@ Gluestack-ui provides a set of pre created icons that can be used directly in ou
 ### Pre built Icons
 
 ```jsx
-// import the component from your component folder
-import { AddIcon } from 'components';
+// import the component from your components folder
+import { AddIcon } from './components';
 ```
 
 <br />
@@ -56,8 +56,8 @@ import { AddIcon } from 'components';
 ### Third Party integration
 
 ```jsx
-// import Icon component from your component folder
-import { Icon } from 'components';
+// import Icon component from your components folder
+import { Icon } from './components';
 // Import Icon from third party library
 import { Camera } from 'lucide-react-native';
 
