--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Fab Component | Installation, Usage, and API
+
 description: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
+
 pageTitle: Fab
+
 pageDescription: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
+
 showHeader: true
 ---
 
@@ -34,8 +38,8 @@ npx install @gluestack-ui add fab
 ## Import
 
 ```jsx
-// import the component from your component folder
-import { Fab } from 'components';
+// import the component from your components folder
+import { Fab } from './components';
 ```
 
 <br />
