--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Modal Component | Installation, Usage, and API
+
 description: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
+
 pageTitle: Modal
+
 pageDescription: A modal is a dialog that focuses the user's attention exclusively on an information via a window that is overlaid on primary content.
+
 showHeader: true
 ---
 
@@ -25,25 +29,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Modal` component to your project.
-
-```jsx
-npx install @gluestack-ui add modal
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Modal } from 'components';
-```
-
-````
-
-<br />
 
 # Basic
 
@@ -118,6 +103,23 @@ function App(){
 </AppProvider>
 <br />
 
+# Installation
+
+This command copies the `Modal` component to your project.
+
+```bash
+npx install @gluestack-ui add modal
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Modal } from './components';
+```
+
+<br />
+
 ## Anatomy
 
 The modal component consists of the following parts:
@@ -135,7 +137,7 @@ export default () => (
     </Modal.Content>
   </Modal>
 );
-````
+```
 
 ## API Reference
 
