--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Popover Component | Installation, Usage, and API
+
 description: Popover is a non-modal dialog that floats around a trigger.
+
 pageTitle: Popover
+
 pageDescription: Popover is a non-modal dialog that floats around a trigger.
+
 showHeader: true
 ---
 
@@ -22,23 +26,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Popover` component to your project.
-
-```jsx
-npx install @gluestack-ui add popover
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Popover } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -103,6 +90,23 @@ import { Popover } from 'components';
     }}
   />
 </AppProvider>
+
+<br />
+
+# Installation
+
+This command copies the `Popover` component to your project.
+
+```jsx
+npx install @gluestack-ui add popover
+```
+
+## Import
+
+```jsx
+// import the component from your components folder
+import { Popover } from './components';
+```
 
 <br />
 
