--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -35,7 +35,7 @@ npx install @gluestack-ui add provider
     showArgsController={false}
     metaData={{
       code: `
-// import { Provider } from 'components';
+// import { Provider } from './components';
 // import { config } from '../gluestack.config';
 function App(){
   return (
