--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Checkbox Component | Installation, Usage, and API
+
 description: The Checkbox component allows a user to select multiple values from various options in a form.
+
 pageTitle: Checkbox
+
 pageDescription: The Checkbox component allows a user to select multiple values from various options in a form.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Checkbox` component to your project.
-
-```jsx
-npx install @gluestack-ui add checkbox
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Checkbox } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -68,6 +55,23 @@ import { Checkbox } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Checkbox` component to your project.
+
+```bash
+npx install @gluestack-ui add checkbox
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Checkbox } from './components';
+```
+
 <br />
 
 ## Anatomy
