--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Input Component | Installation, Usage, and API
+
 description: The Input component allows a user to provide input in a text field.
+
 pageTitle: Input
+
 pageDescription: The Input component allows a user to provide input in a text field.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Input` component to your project.
-
-```jsx
-npx install @gluestack-ui add input
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Input } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -62,6 +49,23 @@ import { Input } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Input` component to your project.
+
+```bash
+npx install @gluestack-ui add input
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Input } from './components';
+```
+
 <br />
 
 ## Anatomy
