--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui TextArea Component | Installation, Usage, and API
+
 description: The Textarea component helps create multi-line text inputs.
+
 pageTitle: TextArea
+
 pageDescription: The Textarea component helps create multi-line text inputs.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `TextArea` component to your project.
-
-```jsx
-npx install @gluestack-ui add text-area
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { TextArea } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -62,6 +49,23 @@ import { TextArea } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `TextArea` component to your project.
+
+```bash
+npx install @gluestack-ui add text-area
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { TextArea } from './components';
+```
+
 <br />
 
 ## Anatomy
