--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Center Component | Installation, Usage, and API
+
 description: Center aligns its contents to the center within itself. It is a layout component.
+
 pageTitle: Center
-pageDescription: Center aligns its contents to the center within itself. It is a layout component..
+
+pageDescription: Center aligns its contents to the center within itself. It is a layout component.
+
 showHeader: true
 ---
 
@@ -15,23 +19,6 @@ import { transformedCode } from '../../../utils';
 import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Center` component to your project.
-
-```jsx
-npx install @gluestack-ui add center
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Center } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -59,6 +46,23 @@ import { Center } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Center` component to your project.
+
+```bash
+npx install @gluestack-ui add center
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Center } from './components';
+```
+
 <br />
 
 ## Anatomy
