--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui HStack Component | Installation, Usage, and API
+
 description: HStack aligns items horizontally. Row is also an alias for HStack.
+
 pageTitle: HStack
+
 pageDescription: HStack aligns items horizontally. Row is also an alias for HStack.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `HStack` component to your project.
-
-```jsx
-npx install @gluestack-ui add hstack
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { HStack } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -65,6 +52,23 @@ import { HStack } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `HStack` component to your project.
+
+```bash
+npx install @gluestack-ui add hstack
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { HStack } from './components';
+```
+
 <br />
 
 ## Anatomy
