--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Menu Component | Installation, Usage, and API
+
 description: Menu generates an accessible dropdown and can be used to display a list of actionable items.
+
 pageTitle: Menu
+
 pageDescription: Menu generates an accessible dropdown and can be used to display a list of actionable items.
+
 showHeader: true
 ---
 
@@ -26,23 +30,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Menu` component to your project.
-
-```jsx
-npx install @gluestack-ui add menu
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Menu } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -95,6 +82,23 @@ import { Menu } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Menu` component to your project.
+
+```bash
+npx install @gluestack-ui add menu
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Menu } from './components';
+```
+
 <br />
 
 ## Anatomy
