--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Tooltip Component | Installation, Usage, and API
+
 description: A tooltip component in React is a customizable UI element that provides additional info when users interact with it.
+
 pageTitle: Tooltip
+
 pageDescription: Tooltip component is a customizable UI element that displays additional info when users interact with it, enhancing UX.
+
 showHeader: true
 ---
 
@@ -21,23 +25,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Tooltip` component to your project.
-
-```jsx
-npx install @gluestack-ui add tooltip
-```
-
-## Import
-
-```jsx
-// import the component from your component folder
-import { Tooltip } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -81,6 +68,23 @@ import { Tooltip } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Tooltip` component to your project.
+
+```jsx
+npx install @gluestack-ui add tooltip
+```
+
+## Import
+
+```jsx
+// import the component from your components folder
+import { Tooltip } from './components';
+```
+
 <br />
 
 ## Anatomy
