--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -1,8 +1,12 @@
 ---
 title: gluestack-ui Heading Component | Installation, Usage, and API
+
 description: Heading component gives you the ability to create headings for your page with different sizes and symantics from h1 to h6.
+
 pageTitle: Heading
+
 pageDescription: Heading component gives you the ability to create headings for your page with different sizes and symantics from h1 to h6.
+
 showHeader: true
 ---
 
@@ -20,23 +24,6 @@ import {
 } from '@gluestack/design-system';
 
 import Wrapper from '../../Wrapper';
-
-# Installation
-
-This command copies the `Heading` component to your project.
-
-```jsx
-npx install @gluestack-ui add heading
-```
-
-## Import
-
-```bash
-// import the component from your component folder
-import { Heading } from 'components';
-```
-
-<br />
 
 # Basic
 
@@ -59,6 +46,23 @@ import { Heading } from 'components';
     }}
   />
 </AppProvider>
+<br />
+
+# Installation
+
+This command copies the `Heading` component to your project.
+
+```jsx
+npx install @gluestack-ui add heading
+```
+
+## Import
+
+```bash
+// import the component from your components folder
+import { Heading } from './components';
+```
+
 <br />
 
 ## Anatomy
