feat: installation heading fixed

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -1,6 +1,12 @@
 ---
 title: Installation | gluestack-ui
+
 description: A Quick Installation guide for gluestack-ui
+
+pageTitle: Installation
+
+pageDescription: A Quick Installation guide for gluestack-ui
+
 showHeader: true
 ---
 
