--- a/example/storybook/src/overview/Fonts/index.stories.mdx
+++ b/example/storybook/src/overview/Fonts/index.stories.mdx
@@ -14,9 +14,9 @@ Fonts can be loaded into your project either by using Font plugin from [@dank-st
 
 For the font to work, we need to load that font in that app.
 
-### For NextJs
+### For Next.js
 
-To load font in NextJs
+To load font in Next.js
 
 - Add import of font in global css file
 - Link font using link tag in `<Head/>` in `_document.tsx` file
@@ -30,7 +30,7 @@ To load font in Expo use useFonts function from [expo-font]("https://docs.expo.d
 
 ### Usage
 
-To apply fonts to the Text Component we need to add config, this will return Text component with font styles added for both expo and nextjs.
+To apply fonts to the Text Component we need to add config, this will return Text component with font styles added for both expo and Next.js .
 
 Update the index.tsx file in `components/core/index.tsx` with below code:
 
