--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -48,7 +48,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Spinner` component to your project.
 
 ```bash
-npx install @gluestack-ui add spinner
+gluestack-ui add spinner
 ```
 
 ## Import
