--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -86,7 +86,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `FormControl` component to your project.
 
 ```bash
-npx install @gluestack-ui add form-control
+gluestack-ui add form-control
 ```
 
 ## Import
