--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -59,7 +59,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Input` component to your project.
 
 ```bash
-npx install @gluestack-ui add input
+gluestack-ui add input
 ```
 
 ## Import
