--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -76,7 +76,7 @@ function Example(){
 This command copies the `Radio` component to your project.
 
 ```bash
-npx install @gluestack-ui add radio
+gluestack-ui add radio
 ```
 
 ## Import
