--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -54,7 +54,7 @@ function Example(){
 This command copies the `Switch` component to your project.
 
 ```bash
-npx install @gluestack-ui add switch
+gluestack-ui add switch
 ```
 
 ## Import
