--- a/example/storybook/src/components/Forms/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Tabs/index.stories.mdx
@@ -73,7 +73,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Tabs` component to your project.
 
 ```bash
-npx install @gluestack-ui add tabs
+gluestack-ui add tabs
 ```
 
 ## Import
