--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -59,7 +59,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `TextArea` component to your project.
 
 ```bash
-npx install @gluestack-ui add text-area
+gluestack-ui add text-area
 ```
 
 ## Import
