--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -57,7 +57,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Avatar` component to your project.
 
 ```bash
-npx install @gluestack-ui add avatar
+gluestack-ui add avatar
 ```
 
 ## Import
