--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -107,7 +107,7 @@ function App(){
 This command copies the `AlertDialog` component to your project.
 
 ```bash
-npx install @gluestack-ui add alert-dialog
+gluestack-ui add alert-dialog
 ```
 
 ## Import
