--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -108,7 +108,7 @@ function App(){
 This command copies the `Modal` component to your project.
 
 ```bash
-npx install @gluestack-ui add modal
+gluestack-ui add modal
 ```
 
 ## Import
