--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -49,3 +49,5 @@ const StyledText = styledFonts(Text, {
 
 export { StyledText as Text };
 ```
+
+Similarly, we can pass font styles to any component and then use the returned component (with font styles added).
