--- a/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
@@ -57,7 +57,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Badge` component to your project.
 
 ```bash
-npx install @gluestack-ui add badge
+gluestack-ui add badge
 ```
 
 ## Import
