--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -60,7 +60,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Pressable` component to your project.
 
 ```bash
-npx install @gluestack-ui add pressable
+gluestack-ui add pressable
 ```
 
 ## Import
