--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -53,7 +53,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Heading` component to your project.
 
 ```jsx
-npx install @gluestack-ui add heading
+gluestack-ui add heading
 ```
 
 ## Import
